--- a/jenax-server-parent/jenax-server-core/pom.xml
+++ b/jenax-server-parent/jenax-server-core/pom.xml
@@ -66,7 +66,29 @@
 
 
 	<dependencies>
-	
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm</artifactId>
+                        </dependency>
+
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm-commons</artifactId>
+                        </dependency>
+
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm-tree</artifactId>
+                        </dependency>
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm-util</artifactId>
+                        </dependency>
+
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm-analysis</artifactId>
+                        </dependency>
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-connection-core</artifactId>
