--- a/jenax-arq-parent/jenax-arq-rx/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rx/pom.xml
@@ -14,6 +14,13 @@
 	</parent>
 
 	<dependencies>
+                        <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm</artifactId>
+                        </dependency>
+
+
+
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-rdfconnection</artifactId>
