--- a/jenax-server-parent/jenax-server-standalone/pom.xml
+++ b/jenax-server-parent/jenax-server-standalone/pom.xml
@@ -34,12 +34,12 @@
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
-
+<!--
 		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
+			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
 		</dependency>
-
+-->
 <!--
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
