Added StreamRDF implementation that creates batched sparql update requests

--- a/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
+++ b/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>jena-rdfconnection</artifactId>
 		</dependency>
 
+		<!-- Used for LinkDatasetGraph-to-StreamRDF-to-LinkSparqlQuery -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-utils</artifactId>
+		</dependency>
+
 
 		<!-- Unit Testing -->
 
