--- a/pom.xml
+++ b/pom.xml
@@ -329,11 +329,11 @@
 				<artifactId>jaxb-runtime</artifactId>
 				<version>${jaxb.version}</version>
 			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.glassfish.jaxb</groupId> -->
-<!-- 				<artifactId>jaxb-impl</artifactId> -->
-<!-- 				<version>${jaxb.version}</version> -->
-<!-- 			</dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>org.glassfish.jaxb</groupId> -->
+			<!-- <artifactId>jaxb-impl</artifactId> -->
+			<!-- <version>${jaxb.version}</version> -->
+			<!-- </dependency> -->
 			<!-- <dependency> -->
 			<!-- <groupId>org.glassfish.jaxb</groupId> -->
 			<!-- <artifactId>jaxb-impl</artifactId> -->
@@ -685,19 +685,10 @@
 				<version>${javax.xml.version}</version>
 			</dependency>
 
-<!--
-			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
-				<artifactId>jaxb-impl</artifactId>
-				<version>${javax.xml.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
-				<artifactId>jaxb-core</artifactId>
-				<version>${javax.xml.version}</version>
-			</dependency>
--->
+			<!-- <dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
+				<version>${javax.xml.version}</version> </dependency> <dependency> <groupId>com.sun.xml.bind</groupId> 
+				<artifactId>jaxb-core</artifactId> <version>${javax.xml.version}</version> 
+				</dependency> -->
 
 			<!-- <dependency> <groupId>org.glassfish.jaxb</groupId> <artifactId>jaxb-runtime</artifactId> 
 				<version>2.3.1</version> </dependency> -->
@@ -1156,41 +1147,41 @@
 				<exclusions>
 					<exclusion>
 						<groupId>org.eclipse.jetty</groupId>
-						<artifactId>jetty-server</artifactId> 
-                                	</exclusion>
-                                        <exclusion>
-                                                <groupId>org.eclipse.jetty</groupId>
-                                                <artifactId>jetty-util</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>org.eclipse.jetty</groupId>
-                                                <artifactId>jetty-servlet</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>org.eclipse.jetty</groupId>
-                                                <artifactId>jetty-webapp</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>javax.servlet.jsp</groupId>
-                                                <artifactId>jsp-api</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>com.sun.jersey</groupId>
-                                                <artifactId>jersey-core</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>com.sun.jersey</groupId>
-                                                <artifactId>jersey-servlet</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>com.sun.jersey</groupId>
-                                                <artifactId>jersey-json</artifactId> 
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>com.sun.jersey</groupId>
-                                                <artifactId>jersey-server</artifactId>
-                                        </exclusion>
-                                </exclusions>
+						<artifactId>jetty-server</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-util</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-servlet</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-webapp</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>javax.servlet.jsp</groupId>
+						<artifactId>jsp-api</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-core</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-servlet</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-json</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jersey</groupId>
+						<artifactId>jersey-server</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 
@@ -1575,17 +1566,17 @@
 			</snapshots>
 		</repository>
 
-<!-- Repo for latest jena snapshots -->
-  <repository>
-    <id>apache-repo-snapshots</id>
-    <url>https://repository.apache.org/content/repositories/snapshots/</url>
-    <releases>
-      <enabled>false</enabled>
-    </releases>
-    <snapshots>
-      <enabled>true</enabled>
-    </snapshots>
-  </repository>
+		<!-- Repo for latest jena snapshots -->
+		<repository>
+			<id>apache-repo-snapshots</id>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 
 	</repositories>
 
