--- a/jenax-reprogen-parent/jenax-reprogen-core/pom.xml
+++ b/jenax-reprogen-parent/jenax-reprogen-core/pom.xml
@@ -15,12 +15,12 @@
 	</parent>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
 			<artifactId>aksw-commons-beans</artifactId>
 		</dependency>
-	
+
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
@@ -71,10 +71,9 @@
 		</dependency>
 
 
-		<!-- <dependency> -->
-		<!-- <groupId>net.bytebuddy</groupId> -->
-		<!-- <artifactId>byte-buddy</artifactId> -->
-		<!-- <version>1.9.10</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+		</dependency>
 	</dependencies>
 </project>
