--- a/pom.xml
+++ b/pom.xml
@@ -920,6 +920,11 @@
 				<version>3.3.0</version>
 			</dependency>
 
+			<dependency>
+				<groupId>net.bytebuddy</groupId>
+				<artifactId>byte-buddy</artifactId>
+				<version>1.12.3</version>
+			</dependency>
 
 			<!-- Jetty -->
 			<dependency>
