--- a/jenax-io-parent/jenax-io-core/pom.xml
+++ b/jenax-io-parent/jenax-io-core/pom.xml
@@ -40,6 +40,16 @@
 			<artifactId>hadoop-common</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
