--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,14 @@
 		<jersey.version>2.35</jersey.version>
 		<asm.version>8.0.1</asm.version>
 
+		<guava.version>31.0.1-jre</guava.version>
+		<commons-compress.version>1.21</commons-compress.version>
+
+
 		<slf4j.version>1.8.0-beta4</slf4j.version>
 		<log4j.version>2.15.0</log4j.version>
+		<hadoop.version>3.3.1</hadoop.version>
+		<junit.version>4.13.2</junit.version>
 
 		<spring.version>5.3.2</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
@@ -1158,13 +1164,13 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>27.0.1-jre</version>
+				<version>${guava.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-compress</artifactId>
-				<version>1.20</version>
+				<version>${commons-compress.version}</version>
 			</dependency>
 
 			<!-- When commons-compress just isn't enough (e.g. when there is need 
@@ -1172,7 +1178,7 @@
 			<dependency>
 				<groupId>org.apache.hadoop</groupId>
 				<artifactId>hadoop-common</artifactId>
-				<version>3.3.1</version>
+				<version>${hadoop.version}</version>
 				<!-- <exclusions> <exclusion> <groupId>*</groupId> <artifactId>*</artifactId> 
 					</exclusion> </exclusions> -->
 
@@ -1421,7 +1427,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.12</version>
+				<version>${junit.version}</version>
 			</dependency>
 
 
