--- a/jenax-io-parent/jenax-io-core/pom.xml
+++ b/jenax-io-parent/jenax-io-core/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-parent</artifactId>
+		<artifactId>jenax-io-parent</artifactId>
 		<version>4.3.1-1-SNAPSHOT</version>
 	</parent>
 
