--- a/jenax-models-parent/jenax-models-dcat-api/pom.xml
+++ b/jenax-models-parent/jenax-models-dcat-api/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>org.aksw.jenax</groupId>
-        <artifactId>jenax-parent</artifactId>
+        <artifactId>jenax-models-parent</artifactId>
         <version>4.3.1-1-SNAPSHOT</version>
     </parent>
 
