--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>jenax-facete-parent</module>
 		<module>jenax-conjure-parent</module>
 		<module>jenax-server-parent</module>
+		<!-- <module>jenax-cli-core</module> -->
 	</modules>
 
 	<issueManagement>
@@ -1166,6 +1167,37 @@
 				<version>${commons-compress.version}</version>
 			</dependency>
 
+
+			<!-- TODO Move this to jenax-arq-datasets-difs (would be one fewer thing to maintain separately) -->
+			<dependency>
+				<groupId>org.aksw.difs</groupId>
+				<artifactId>difs-system</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>
+
+			<!-- This creates a cyclic dependency; in essence it means that the hadoop/kyro stuff would have to go t -->
+			<dependency>
+				<groupId>net.sansa-stack</groupId>
+				<artifactId>sansa-spark-jena-java_2.12</artifactId>
+				<version>0.8.0-RC2-SNAPSHOT</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.jena</groupId>
+				<artifactId>jena-tdb2</artifactId>
+				<version>${jena.version}</version>
+			</dependency>
+
 			<!-- When commons-compress just isn't enough (e.g. when there is need 
 				for splittable bzip2 decoding) -->
 			<dependency>
@@ -1213,12 +1245,8 @@
 						<groupId>com.sun.jersey</groupId>
 						<artifactId>jersey-server</artifactId>
 					</exclusion>
-<!--
-					<exclusion>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-					</exclusion>
--->
+					<!-- <exclusion> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
+						</exclusion> -->
 					<exclusion>
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-log4j12</artifactId>
