--- a/jenax-arq-parent/jenax-arq-rx/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rx/pom.xml
@@ -14,12 +14,15 @@
 	</parent>
 
 	<dependencies>
-                        <dependency>
-                                <groupId>org.ow2.asm</groupId>
-                                <artifactId>asm</artifactId>
-                        </dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+		</dependency>
 
-
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-entityinfo</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.jena</groupId>
