--- a/jenax-conjure-parent/jenax-conjure-core/pom.xml
+++ b/jenax-conjure-parent/jenax-conjure-core/pom.xml
@@ -61,6 +61,11 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-entityinfo</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-hdt</artifactId>
 		</dependency>
 
