Added support for default expressions for conjure job params

--- a/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
@@ -16,5 +16,6 @@
 	<modules>
 		<module>jenax-arq-plugins-bundle</module>
 		<module>jenax-arq-plugins-service-vfs</module>
+		<module>jenax-arq-plugins-datatypes</module>
 	</modules>
 </project>
