--- a/jenax-conjure-parent/jenax-conjure-core/pom.xml
+++ b/jenax-conjure-parent/jenax-conjure-core/pom.xml
@@ -16,6 +16,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-plugins-datatypes</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
 			<version>5.6.0.201912101111-r</version>
