--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
 		<jaxb.version>2.3.1</jaxb.version>
 		<jts.version>1.18.1</jts.version>
 
+		<gson.version>2.8.9</gson.version>
+
 		<!-- <atmosphere.version>2.0.0.RC3</atmosphere.version> -->
 		<!-- <atmosphere-spring.version>1.1.0.RC5</atmosphere-spring.version> -->
 		<!-- <jetty-plugin.version>8.1.10.v20130312</jetty-plugin.version> -->
@@ -1439,7 +1441,7 @@
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
-				<version>2.8.5</version>
+				<version>${gson.version}</version>
 			</dependency>
 
 			<dependency>
