--- a/jenax-conjure-parent/jenax-conjure-core/pom.xml
+++ b/jenax-conjure-parent/jenax-conjure-core/pom.xml
@@ -27,6 +27,14 @@
 		</dependency>
 
 		<dependency>
+                        <groupId>org.eclipse.jgit</groupId>
+                        <artifactId>org.eclipse.jgit.http.server</artifactId>
+                        <version>5.6.0.201912101111-r</version>
+                </dependency>
+
+
+
+		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch.agentproxy.jsch</artifactId>
 			<version>0.0.9</version>
