--- a/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
+++ b/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>jena-rdfconnection</artifactId>
 		</dependency>
 		-->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-io-kryo</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
