--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
 		<guava.version>31.0.1-jre</guava.version>
 		<commons-compress.version>1.21</commons-compress.version>
-		<commons-vfs2.version>2.9.0-805-SNAPSHOT</commons-vfs2.version>
+		<commons-vfs2.version>2.9.0</commons-vfs2.version>
 
 		<slf4j.version>1.8.0-beta4</slf4j.version>
 		<log4j.version>2.17.1</log4j.version>
