--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 
 		<spring.version>5.3.2</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
-		<aksw.commons.version>0.9.2-SNAPSHOT</aksw.commons.version>
+		<aksw.commons.version>0.9.2</aksw.commons.version>
 
 		<javax.xml.version>2.3.1</javax.xml.version>
 		<jaxb.version>2.3.1</jaxb.version>
