--- a/jenax-arq-parent/jenax-arq-datasets-parent/jenax-arq-datasets-diff/pom.xml
+++ b/jenax-arq-parent/jenax-arq-datasets-parent/jenax-arq-datasets-diff/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-datasets-parent</artifactId>
-		<version>4.4.0-1-SNAPSHOT</version>
+		<version>4.4.0-1</version>
 	</parent>
 
 	<dependencies>
