--- a/jenax-io-parent/jenax-io-kryo/pom.xml
+++ b/jenax-io-parent/jenax-io-kryo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.aksw.jenax</groupId>
         <artifactId>jenax-io-parent</artifactId>
-        <version>4.4.0-1-SNAPSHOT</version>
+        <version>4.4.0-1</version>
     </parent>
 
     <artifactId>jenax-io-kryo</artifactId>
