--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 
 		<spring.version>5.3.2</spring.version>
 		<spring.batch.version>4.3.1</spring.batch.version>
-		<aksw.commons.version>0.9.2</aksw.commons.version>
+		<aksw.commons.version>0.9.3-SNAPSHOT</aksw.commons.version>
 
 		<javax.xml.version>2.3.1</javax.xml.version>
 		<jaxb.version>2.3.1</jaxb.version>
@@ -1251,6 +1251,10 @@
 						<groupId>commons-logging</groupId>
 						<artifactId>commons-logging</artifactId>
 					</exclusion>
+					<exclusion>
+	                	                <groupId>org.apache.commons</groupId>
+        		                        <artifactId>commons-vfs2</artifactId>
+					</exclusion>
 				</exclusions>
 			</dependency>
 
@@ -1281,6 +1285,13 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+
+                <dependency>
+                        <groupId>org.apache.httpcomponents.client5</groupId>
+                        <artifactId>httpclient5</artifactId>
+                        <version>5.1</version>
+                </dependency>
+
 
 <!-- 			<dependency> -->
 <!-- 				<groupId>commons-httpclient</groupId> -->
