Added RDFDatatypeBinding (and a stub for RDFDatatypeExprList). Added json:explode property function to turn json objects / arrays to bindings.

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>jenax-arq-collections</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-plugins-datatypes</artifactId>
+		</dependency>
+
 		<!-- Used for cutsom Aggregators (should probably go to jsa utls) -->
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
