--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-datatypes/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-datatypes/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>jena-arq</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 		<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-arq-connection-core</artifactId> 
 			</dependency> -->
 
